--- a/index.html
+++ b/index.html
@@ -183,78 +183,67 @@
         resizeCanvas();
         window.addEventListener('resize', resizeCanvas);
 
-        // Function to draw a line segment for a single petal
-        function drawLineSegment(startX, startY, controlX, controlY, endX, endY, color, lineWidth) {
-            ctx.strokeStyle = color;
-            ctx.lineWidth = lineWidth;
+        // Function to draw a single petal with growing animation
+        function drawPetal(x, y, angle, size, opacity) {
+            ctx.save();
+            ctx.translate(x, y);
+            ctx.rotate(angle);
+            ctx.fillStyle = `rgba(255, 105, 180, ${opacity})`; // Pink petal color with variable opacity
             ctx.beginPath();
-            ctx.moveTo(startX, startY);
-            ctx.lineTo(controlX, controlY);
-            ctx.stroke();
+            ctx.moveTo(0, 0);
+            ctx.quadraticCurveTo(size / 2, -size / 3, size, 0);
+            ctx.quadraticCurveTo(size / 2, size / 3, 0, 0);
+            ctx.fill();
+            ctx.restore();
         }
 
-        // Function to draw a single flower with animated line segments
-        function drawFlower(x, y) {
-            const petalColor = "#d291bc"; // Elegant pink color for petals
-            const stemColor = "#888"; // Grey color for stem
-            const lineWidth = 1.5;
-            let segmentIndex = 0;
+        // Function to animate a single hibiscus bloom
+        function bloomFlower(x, y) {
+            const petalCount = 5; // Number of petals
+            let growth = 0.2;     // Initial growth factor
+            let maxGrowth = 1.5;  // Maximum growth size multiplier
+            let opacity = 0.1;    // Initial opacity for blooming effect
 
-            // Define each segment of the flower as start and end points
-            const flowerSegments = [
-                // Stem segments
-                { startX: x, startY: y, controlX: x + 5, controlY: y + 15, endX: x, endY: y + 30, color: stemColor }, // stem part 1
-                { startX: x, startY: y + 30, controlX: x - 5, controlY: y + 40, endX: x, endY: y + 50, color: stemColor }, // stem part 2
+            // Animation loop for the blooming flower
+            function animateBloom() {
+                ctx.clearRect(x - 100, y - 100, 200, 200); // Clear around the flower area for animation effect
 
-                // Petal segments (drawn clockwise around the stem)
-                { startX: x, startY: y, controlX: x - 20, controlY: y - 20, endX: x - 10, endY: y - 30, color: petalColor },
-                { startX: x - 10, startY: y - 30, controlX: x, controlY: y - 50, endX: x + 10, endY: y - 30, color: petalColor },
-                { startX: x + 10, startY: y - 30, controlX: x + 20, controlY: y - 20, endX: x, endY: y, color: petalColor },
-
-                // Leaf on the stem
-                { startX: x, startY: y + 20, controlX: x - 15, controlY: y + 30, endX: x, endY: y + 40, color: petalColor }
-            ];
-
-            // Function to draw each segment in sequence
-            function drawNextSegment() {
-                if (segmentIndex >= flowerSegments.length) {
-                    clearInterval(segmentInterval);
-                    return;
+                // Draw each petal around the center with increased size and opacity
+                for (let i = 0; i < petalCount; i++) {
+                    const angle = (Math.PI * 2 / petalCount) * i; // Angle for each petal around the center
+                    drawPetal(x, y, angle, growth * 30, opacity); // Draw petal with scaling size
                 }
 
-                // Get the current segment and draw it
-                const segment = flowerSegments[segmentIndex];
-                drawLineSegment(
-                    segment.startX,
-                    segment.startY,
-                    segment.controlX,
-                    segment.controlY,
-                    segment.endX,
-                    segment.endY,
-                    segment.color,
-                    lineWidth
-                );
+                // Draw the flower center to add depth
+                ctx.beginPath();
+                ctx.arc(x, y, growth * 5, 0, Math.PI * 2); // Growing circle for the center
+                ctx.fillStyle = `rgba(255, 69, 0, ${opacity})`; // Deep orange center color
+                ctx.fill();
 
-                segmentIndex++;
+                // Update growth and opacity for next frame
+                if (growth < maxGrowth) {
+                    growth += 0.05; // Increase growth size
+                    opacity += 0.02; // Gradually increase opacity
+                    requestAnimationFrame(animateBloom);
+                }
             }
 
-            // Draw each segment with a delay to create the "drawing" effect
-            const segmentInterval = setInterval(drawNextSegment, 200);
+            // Start the bloom animation
+            animateBloom();
         }
 
-        // Function to initiate drawing flowers in random positions
+        // Function to initiate random blooms across the canvas
         function animateFlowers() {
             const x = Math.random() * canvas.width;
             const y = Math.random() * canvas.height;
-            drawFlower(x, y);
+            bloomFlower(x, y);
 
-            // Draw a new flower every 3 seconds
+            // Bloom a new flower every 3 seconds
             setTimeout(animateFlowers, 3000);
         }
 
-        // Start the flower drawing animation
+        // Start the flower blooming animation
         animateFlowers();
     </script>
-
 </body>
 </html>
