--- a/index.html
+++ b/index.html
@@ -44,24 +44,16 @@
         <h2>Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
-                <img src="path/to/html-icon.svg" alt="HTML Icon">
+                <img src="svg/icons/html-icon.svg" alt="HTML Icon" class="skill-icon">
                 <p>HTML</p>
             </div>
             <div class="skill-card">
-                <img src="path/to/css-icon.svg" alt="CSS Icon">
+                <img src="svg/icons/html-icon.svg" alt="CSS Icon" class="skill-icon">
                 <p>CSS</p>
             </div>
             <div class="skill-card">
-                <img src="path/to/python-icon.svg" alt="Python Icon">
+                <img src="svg/icons/html-icon.svg" alt="Python Icon" class="skill-icon">
                 <p>Python</p>
-            </div>
-            <div class="skill-card">
-                <img src="path/to/RStudio-icon.svg" alt="RStudio Icon">
-                <p>RStudio</p>
-            </div>
-            <div class="skill-card">
-                <img src="path/to/STATASE-icon.svg" alt="STATASE Icon">
-                <p>STATASE</p>
             </div>
         </div>
     </section>
