--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <h2>Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
-                <img src="svg/icons/html-icon.svg" alt="HTML Icon" class="skill-icon">
+                <img src="svg/icons/html.svg" alt="HTML Icon" class="skill-icon">
                 <p>HTML</p>
             </div>
             <div class="skill-card">
-                <img src="svg/icons/html-icon.svg" alt="CSS Icon" class="skill-icon">
+                <img src="svg/icons/css.svg" alt="CSS Icon" class="skill-icon">
                 <p>CSS</p>
             </div>
             <div class="skill-card">
-                <img src="svg/icons/html-icon.svg" alt="Python Icon" class="skill-icon">
+                <img src="svg/icons/python.svg" alt="Python Icon" class="skill-icon">
                 <p>Python</p>
             </div>
         </div>
