--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p class="about-text">I'm a fourth-year student at the University of Ottawa, majoring in Economics with a minor in Computer Science, studying in French. Currently, I work in IT within the human capital management solutions branch at Public Services and Procurement Canada. Here, I leverage my background in accounting to support tech initiatives for the Government of Canada. I am passionate about building a career that advances technology to create meaningful impacts in the financial world. I look forward to connecting with others who share a vision for tech-driven progress.</p>
+        <p class="about-text">I'm a fourth-year Economics student at the University of Ottawa, minoring in Computer Science. I currently work in IT with the vendor management team at Public Services and Procurement Canada, combining my skills in tech and finance. Fluent in English, French, and Korean, I bring a multicultural perspective to my work. I’m passionate about using technology to make a real impact in finance, and in my free time, I love exploring fashion, playing classical music instruments, and trying new foods. Looking forward to connecting with others who are excited about tech-driven progress.</p>
         <p class="about-text additional">My projects are coming soon, but here’s a look at my experience so far.</p>
     </section>
 
