--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
                 <img src="svg/icons/python.svg" alt="Python Icon" class="skill-icon">
                 <p>Python</p>
             </div>
+            <div class="skill-card">
+                <img src="svg/icons/StataSE.svg" alt="STATA Icon" class="skill-icon">
+                <p>STATA</p>
+            </div>
+            <div class="skill-card">
+                <img src="svg/icons/RStudio.svg" alt="RSTUDIO Icon" class="skill-icon">
+                <p>RSTUDIO</p>
+            </div>
+            <div class="skill-card">
+                <img src="svg/icons/SAP.svg" alt="SAP Icon" class="skill-icon">
+                <p>SAP</p>
+            </div>
         </div>
     </section>
 
