--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="skill-card">
                 <img src="svg/icons/RStudio.svg" alt="RSTUDIO Icon" class="skill-icon">
-                <p>RSTUDIO</p>
+                <p>RStudio</p>
             </div>
             <div class="skill-card">
                 <img src="svg/icons/SAP.svg" alt="SAP Icon" class="skill-icon">
