--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
             // Loop through each section to find the one currently in view
             sections.forEach(section => {
-                const sectionTop = section.offsetTop - 80;
+                const sectionTop = section.offsetTop - 100;
                 const sectionBottom = sectionTop + section.offsetHeight;
 
                 if (window.pageYOffset >= sectionTop && window.pageYOffset < sectionBottom) {
@@ -273,7 +273,7 @@
                 e.preventDefault();
                 const targetId = this.getAttribute('href').substring(1);
                 const targetSection = document.getElementById(targetId);
-                const headerOffset = 80; // Adjust this value to the heigh of the header 
+                const headerOffset = 80; // Adjust to match your header height
 
                 const elementPosition = targetSection.offsetTop;
                 const offsetPosition = elementPosition - headerOffset;
