--- a/index.html
+++ b/index.html
@@ -145,8 +145,15 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p class="about-text">I'm a fourth-year Economics student at the University of Ottawa, minoring in Computer Science. I currently work in IT with the vendor management team at Public Services and Procurement Canada, combining my skills in tech and finance. Fluent in English, French, and Korean, I bring a multicultural perspective to my work. I’m passionate about using technology to make a real impact in finance, and in my free time, I love exploring fashion, playing classical music instruments, and trying new foods. Looking forward to connecting with others who are excited about tech-driven progress.</p>
-        <p class="about-text additional">My projects are coming soon, but here’s a look at my experience so far.</p>
+        <div class="about-container">
+            <div class="about-photo">
+                <img src="path/to/your-photo.jpg" alt="Eunice Park" class="profile-photo">
+            </div>
+            <div class="about-text">
+                <p class="about-text">I'm a third-year Economics student at the University of Ottawa, minoring in Computer Science. I currently work in IT with the vendor management team at Public Services and Procurement Canada, combining my skills in tech and finance. Fluent in English, French, and Korean, I bring a multicultural perspective to my work. I’m passionate about using technology to make a real impact in finance, and in my free time, I love exploring fashion, playing classical music instruments, and trying new foods. Looking forward to connecting with others who are excited about tech-driven progress.</p>
+                <p class="about-text additional">My projects are coming soon, but here’s a look at my experience so far.</p>
+            </div>
+        </div>
     </section>
 
     <!-- Skills Section -->
