--- a/index.html
+++ b/index.html
@@ -244,7 +244,20 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; Eunice Park @2024 </p>
+        <div class="footer-content">
+            <p>&copy; Eunice Park @2024</p>
+            <div class="footer-icons">
+                <a href="https://github.com/eparrk" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="mailto:euniceparrk@gmail.com" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                </a>
+            </div>
+        </div>
+        <a href="#hero" class="back-to-top">
+            <i class="fas fa-chevron-up"></i>
+        </a>
     </footer>
 
     <!-- Smooth Scrolling JavaScript -->
