--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
 
     <!-- Skills Section -->
     <section id="skills">
-        <h2>Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
                 <img src="svg/icons/html.svg" alt="HTML Icon" class="skill-icon">
@@ -247,6 +246,9 @@
         <div class="footer-content">
             <p>&copy; Eunice Park @2024</p>
             <div class="footer-icons">
+                <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
                 <a href="https://github.com/eparrk" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
