--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Hero Section -->
     <section id="hero">
         <div class="hero-content">
-            <h1>Hi, my name is Eunice</h1>
+            <h1>Hi, my name is Eunice Park</h1>
             <p class="hero-subtext">I'm passionate about technology, finance, and creating meaningful digital experiences.</p>
         </div>
     </section>
