--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <header>
         <nav>
             <a href="#about">About</a>
+            <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -186,13 +187,13 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="projects-grid">
+    <!-- Experience Section -->
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="experience-grid">
         <!-- Job 1-->
-        <div class="projects-card">
-            <div class="projects-header">
+        <div class="experience-card">
+            <div class="experience-header">
                 <span class="job-title">Technical Advisor & Project Initiator</span>
                 <span class="date">Jan 2024 - Current</span>
             </div>
@@ -200,7 +201,7 @@
                 <span class="company">Public Services and Procurement Canada</span>
                 <span class="branch">Human Capital Management Solutions Branch</span>
             </div>
-            <ul class="projects-details">
+            <ul class="experience-details">
                 <li>Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination</li>
                 <li>Collaborating with IBM (B2B) to streamline processes, maintain contract precision, and create legal documentation</li>
                 <li>Co-initiated a generic mailbox setup for team communication and supported SharePoint site development for PSPC</li>
@@ -213,21 +214,27 @@
         </div>
 
         <!-- Job 2-->
-        <div class="projects-card">
-            <div class="projects-header">
+        <div class="experience-card">
+            <div class="experience-header">
                 <span class="job-title">Accounting and Finance Assistant</span>
                 <span class="date">May 2022 - Aug 2023</span>
             </div>
             <div class="company-branch">
                 <span class="company">Andorix Inc.</span>
             </div>
-            <ul class="projects-details">
+            <ul class="experience-details">
                 <li>Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection</li>
                 <li>Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One</li>
             </ul>
         </div>
 
         </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+
     </section>
 
     <!-- Contact Section -->
