--- a/index.html
+++ b/index.html
@@ -234,7 +234,24 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-
+        <div class="project-cards-container">
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Coming soon.</p>
+            </div>
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Coming soon.</p>
+            </div>
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Coming soon.</p>
+            </div>
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Coming soon.</p>
+            </div>
+        </div>
     </section>
 
     <!-- Contact Section -->
@@ -251,7 +268,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>&copy; Eunice Park @2024</p>
+            <p>&copy; Park @2024</p>
             <div class="footer-icons">
                 <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank">
                     <i class="fab fa-linkedin"></i>
