--- a/index.html
+++ b/index.html
@@ -257,18 +257,19 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
+        <hr class="divider">
         <p>Feel free to reach out through any of the following platforms:</p>
-        <div class="contact-links">
+        <p class="contact-links">
             <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank">LinkedIn</a>
             <a href="https://github.com/eparrk" target="_blank">GitHub</a>
             <a href="mailto:euniceparrk@gmail.com">Email</a>
-        </div>
+        </p>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>&copy; Park @2024</p>
+            <p>&copy; Park 2024</p>
             <div class="footer-icons">
                 <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank">
                     <i class="fab fa-linkedin"></i>
