--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <hr class="divider">
-        <p>Feel free to reach out through any of the my platforms!</p>
+        <p>Feel free to reach out through any of my platforms!</p>
         <form class="contact-form">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
