--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <header>
         <nav>
             <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#education">Education</a>
             <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
@@ -159,6 +161,7 @@
 
     <!-- Skills Section -->
     <section id="skills">
+        <h2>Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
                 <img src="svg/icons/html.svg" alt="HTML Icon" class="skill-icon">
@@ -202,7 +205,7 @@
                 <span class="date">Jan 2024 - Current</span>
             </div>
             <div class="company-branch">
-                <span class="company">Public Services and Procurement Canada</span>
+                <span class="company">Public Services and Procurement Canada, FSWEP</span>
                 <span class="branch">Human Capital Management Solutions Branch</span>
             </div>
             <ul class="experience-details">
@@ -221,14 +224,18 @@
         <div class="experience-card">
             <div class="experience-header">
                 <span class="job-title">Accounting and Finance Assistant</span>
-                <span class="date">May 2022 - Aug 2023</span>
+                <span class="date">May 2022 - Aug 2022</span>
             </div>
             <div class="company-branch">
-                <span class="company">Andorix Inc.</span>
+                <span class="company">Andorix Inc., Co-op</span>
             </div>
             <ul class="experience-details">
-                <li>Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection</li>
-                <li>Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One</li>
+                <li>Customer - Issued invoices, Accounts Receivable aging review, Collection effort and response</li>
+                <li>Vendor - Posted vendor invoices and managed accounts payable for over 50 vendors</li>
+                <li>Bank- Incoming and Outgoing payment applications, Bank reconciliation </li>
+                <li>Updated 100+ Customer and Vendor master file (address, payment term, tax ID, contact)</li>
+                <li>Assisted the accounting manager in preparing financial statements and consulting payroll reconciliations</li>
+                <li>Used SAP Business One for financial transactions</li>
             </ul>
         </div>
 
