--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -194,6 +193,36 @@
         </div>
     </section>
 
+    <!-- Education -->
+    <section id="education"
+        <h2>Education</h2>
+        <div class="education-grid">
+        <!-- University -->
+        <div class="education-card">
+            <div class="education-header">
+                <span class="school-name">University of Ottawa</span>
+                <span class="date">Sep 2021 - Dec 2025</span>
+            </div>
+            <div class=degree-specialization>
+                <span class="degree">Bachelor of Social Science in Interdisciplinary Studies, Economics Major, Computer Science Minor</span>
+                <span class="specialization">Relevant Coursework: Probability and Statistics for Economists, Cost-Benefit Analysis </span>
+            </div>
+        </div>
+
+        <!-- Highschool -->
+        <div class="education-card">
+            <div class="education-header">
+                <span class="school-name">École Secondaire Catholique Sainte-Famille</Sainte-></span>
+                <span class="date">Sep 2017 - June 2021</span>
+            </div>
+            <div class=degree-specialization>
+                <span class="degree">Bachelor of Social Science in Interdisciplinary Studies, Economics Major, Computer Science Minor</span>
+                <span class="specialization">Relevant Coursework: Probability and Statistics for Economists, Cost-Benefit Analysis </span>
+            </div>
+        </div>
+        </div>
+    </section>
+
     <!-- Experience Section -->
     <section id="experience">
         <h2>Experience</h2>
@@ -245,42 +274,7 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project-cards-container">
-            <div class="project-card">
-                <h3>Project Title</h3>
-                <p>Coming soon.</p>
-            </div>
-            <div class="project-card">
-                <h3>Project Title</h3>
-                <p>Coming soon.</p>
-            </div>
-            <div class="project-card">
-                <h3>Project Title</h3>
-                <p>Coming soon.</p>
-            </div>
-            <div class="project-card">
-                <h3>Project Title</h3>
-                <p>Coming soon.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Feel free to reach out through any of my platforms!</p>
-        <form class="contact-form">
-            <div class="form-group">
-                <input type="text" id="name" placeholder="Name">
-            </div>
-            <div class="form-group">
-                <input type="email" id="email" placeholder="Email">
-            </div>
-            <div class="form-group">
-                <textarea id="message" rows="4" placeholder="Message"></textarea>
-            </div>
-            <button type="submit">Submit</button>
-        </form>
+        
     </section>
 
     <!-- Footer -->
