--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
                 <span class="date">Sep 2017 - June 2021</span>
             </div>
             <div class=degree-specialization>
-                <span class="degree">Bachelor of Social Science in Interdisciplinary Studies, Economics Major, Computer Science Minor</span>
-                <span class="specialization">Relevant Coursework: Probability and Statistics for Economists, Cost-Benefit Analysis </span>
+                <span class="degree">Bilingual Education Certificate</span>
             </div>
         </div>
         </div>
@@ -274,7 +273,7 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        
+
         
     </section>
 
