--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </section>
 
     <!-- Education -->
-    <section id="education"
+    <section id="education">
         <h2>Education</h2>
         <div class="education-grid">
         <!-- University -->
@@ -212,7 +212,7 @@
         <!-- Highschool -->
         <div class="education-card">
             <div class="education-header">
-                <span class="school-name">École Secondaire Catholique Sainte-Famille</Sainte-></span>
+                <span class="school-name">École Secondaire Catholique Sainte-Famille</span>
                 <span class="date">Sep 2017 - June 2021</span>
             </div>
             <div class=degree-specialization>
