--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             </div>
             <div class=degree-specialization>
                 <span class="degree">Bilingual Education Certificate</span>
+                <span class="specialization">Activities & Societies: Enfant Entraide, Journée Cougar, Woodshop, Badminton</span>
             </div>
         </div>
         </div>
