--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <h1>Hi, my name is Eunice Park</h1>
             <p class="hero-subtext">I'm passionate about technology, finance, and creating meaningful digital experiences.</p>
         </div>
+
+        <!-- Scroll down messgae -->
+         <div class="scroll-down">
+            <span>Scroll Down</span>
+            <i class="fas fa-chevron-down"></i>
+         </div>
     </section>
 
     <!-- Navigation Bar -->
