--- a/index.html
+++ b/index.html
@@ -196,6 +196,42 @@
                 <img src="svg/icons/PowerBI.svg" alt="PowerBI Icon" class="skill-icon">
                 <p>PowerBI</p>
             </div>
+            <div class="skill-card">
+                <img src="svg/icons/SharePoint.svg" alt="Sharepoint Icon" class="skill-icon">
+                <p>SharePoint</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+    
+        <!-- Technical Skills -->
+        <div class="skills-container">
+            <!-- Existing skill cards go here -->
+            <div class="skill-card">
+                <img src="svg/icons/html.svg" alt="HTML Icon" class="skill-icon">
+                <p>HTML</p>
+            </div>
+            <!-- More coding skills -->
+        </div>
+
+        <!-- New Non-Technical Skills Section -->
+        <h3>Other Skills</h3>
+        <div class="skills-container other-skills">
+            <div class="skill-card">
+                <i class="fas fa-language skill-icon"></i>
+                <p>Multilingual: English, French, Korean</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-music skill-icon"></i>
+                <p>Classical Music (Instruments)</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-utensils skill-icon"></i>
+                <p>Food Exploration</p>
+            </div>
+            <!-- Add more non-technical skill cards as needed -->
         </div>
     </section>
 
