--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div class="hero-content">
             <h1>Hi, my name is Eunice Park</h1>
             <p class="hero-subtext">I'm passionate about technology, finance, and creating meaningful digital experiences.</p>
+            <!-- View Resume Button -->
+            <a href ="'/Resume-Park_Eunice.pdf" class="resume-button" target="_blank>View Resume"></a>
         </div>
 
         <!-- Scroll down messgae -->
@@ -35,6 +37,7 @@
     <header>
         <nav>
             <a href="#about">About</a>
+            <a href="#resume">Resume</a>
             <a href="#skills">Skills</a>
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
