--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
         <div class="hero-content">
             <h1>Hi, my name is Eunice Park</h1>
             <p class="hero-subtext">I'm passionate about technology, finance, and creating meaningful digital experiences.</p>
-            <!-- View Resume Button -->
-            <a href ="'/Resume-Park_Eunice.pdf" class="resume-button" target="_blank>View Resume"></a>
         </div>
 
         <!-- Scroll down messgae -->
@@ -37,11 +35,12 @@
     <header>
         <nav>
             <a href="#about">About</a>
-            <a href="#resume">Resume</a>
             <a href="#skills">Skills</a>
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
+            <!-- Resume Button Link-->
+            <a href="assets/Resume-Park_Eunice.pdf" target="_blank" class="resume-button">Resume</a>
         </nav>
     </header>
 
