--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <!-- Scroll down messgae -->
-         <div class="scroll-down">
+         <div class="scroll-down" id="scroll-down">
             <span>Scroll Down</span>
             <i class="fas fa-chevron-down"></i>
          </div>
@@ -287,7 +287,6 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-
         
     </section>
 
@@ -336,6 +335,19 @@
                 if (link.getAttribute("href").substring(1) === currentSection) {
                     link.classList.add("active");
                 }
+            });
+        });
+
+        // Smooth scroll to About section on scroll-down click
+        document.getElementById("scroll-down").addEventListener("click", function() {
+            const aboutSection = document.getElementById("about");
+            const headerOffset = 80; // Offset for fixed header height
+            const elementPosition = aboutSection.offsetTop;
+            const offsetPosition = elementPosition - headerOffset;
+
+            window.scrollTo ({
+                top: offsetPosition,
+                behavior: "smooth"
             });
         });
 
