--- a/index.html
+++ b/index.html
@@ -206,6 +206,20 @@
         </div>
     </section>
 
+    <!-- Interpersonal Skills Section -->
+    <section id="interpersonal-skills">
+        <h2>Interpersonal Skills</h2>
+        <div class="skills-list">
+            <div class="skill-item">Project Management</div>
+            <div class="skill-item">Time Management</div>
+            <div class="skill-item">Bilingual Communication</div>
+            <div class="skill-item">Collboration</div>
+            <div class="skill-item">Adaptability</div>
+            <div class="skill-item">Problem-Solving</div>
+            <div class="skill-item">Customer Service</div>
+        </div>
+    </section>
+
     <!-- Education -->
     <section id="education">
         <h2>Education</h2>
