--- a/index.html
+++ b/index.html
@@ -209,14 +209,43 @@
     <!-- Interpersonal Skills Section -->
     <section id="interpersonal-skills">
         <h2>Interpersonal Skills</h2>
-        <div class="skills-list">
-            <div class="skill-item">Project Management</div>
-            <div class="skill-item">Time Management</div>
-            <div class="skill-item">Bilingual Communication</div>
-            <div class="skill-item">Collboration</div>
-            <div class="skill-item">Adaptability</div>
-            <div class="skill-item">Problem-Solving</div>
-            <div class="skill-item">Customer Service</div>
+        <div class="skills-bars">
+            <div class="skill-bar">
+                <span class="skill-label">Communication</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill-bar">
+                <span class="skill-label">Teamwork</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 85%;"></div>
+                </div>
+            </div>
+            <div class="skill-bar">
+                <span class="skill-label">Adaptability</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 80%;"></div>
+                </div>
+            </div>
+            <div class="skill-bar">
+                <span class="skill-label">Problem-Solving</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 75%;"></div>
+                </div>
+            </div>
+            <div class="skill-bar">
+                <span class="skill-label">Time Management</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 85%;"></div>
+                </div>
+            </div>
+            <div class="skill-bar">
+                <span class="skill-label">Leadership</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 70%;"></div>
+                </div>
+            </div>
         </div>
     </section>
 
