--- a/index.html
+++ b/index.html
@@ -208,44 +208,8 @@
 
     <!-- Interpersonal Skills Section -->
     <section id="interpersonal-skills">
-        <h2>Interpersonal Skills</h2>
-        <div class="skills-bars">
-            <div class="skill-bar">
-                <span class="skill-label">Communication</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 90%;"></div>
-                </div>
-            </div>
-            <div class="skill-bar">
-                <span class="skill-label">Teamwork</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 85%;"></div>
-                </div>
-            </div>
-            <div class="skill-bar">
-                <span class="skill-label">Adaptability</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 80%;"></div>
-                </div>
-            </div>
-            <div class="skill-bar">
-                <span class="skill-label">Problem-Solving</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 75%;"></div>
-                </div>
-            </div>
-            <div class="skill-bar">
-                <span class="skill-label">Time Management</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 85%;"></div>
-                </div>
-            </div>
-            <div class="skill-bar">
-                <span class="skill-label">Leadership</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 70%;"></div>
-                </div>
-            </div>
+        <div class="interpersonal-card">
+            <p>Communication | Teamwork | Adaptability | Problem-Solving | Time Management | Leadership</p>
         </div>
     </section>
 
