Update footer with new design and "Back to Top" feature
- Added new footer structure to index.html
- Updated styles.css with footer styles and animations
- Implemented smooth scrolling for "Back to Top" link

--- a/index.html
+++ b/index.html
@@ -294,20 +294,21 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>&copy; Park 2024</p>
+            <p>&copy; Eunice Park 2024 | Let's Connect</p>
+            <p>Feel free to reach out to me on social media or via email!</p>
             <div class="footer-icons">
-                <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank">
+                <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank" aria-label="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/eparrk" target="_blank">
+                <a href="https://github.com/eparrk" target="_blank" aria-label="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="mailto:euniceparrk@gmail.com" target="_blank">
+                <a href="mailto:euniceparrk@gmail.com" target="_blank" aria-label="Email Eunice">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
         </div>
-        <a href="#hero" class="back-to-top">
+        <a href="#hero" class="back-to-top" aria-label="Back to Top">
             <i class="fas fa-chevron-up"></i>
         </a>
     </footer>
