--- a/index.html
+++ b/index.html
@@ -294,21 +294,20 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>&copy; Eunice Park 2024 | Let's Connect</p>
-            <p>Feel free to reach out to me on social media or via email!</p>
+            <p>&copy; Park 2024</p>
             <div class="footer-icons">
-                <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank" aria-label="LinkedIn Profile">
+                <a href="https://www.linkedin.com/in/eunicepark28/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/eparrk" target="_blank" aria-label="GitHub Profile">
+                <a href="https://github.com/eparrk" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="mailto:euniceparrk@gmail.com" target="_blank" aria-label="Email Eunice">
+                <a href="mailto:euniceparrk@gmail.com" target="_blank">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
         </div>
-        <a href="#hero" class="back-to-top" aria-label="Back to Top">
+        <a href="#hero" class="back-to-top">
             <i class="fas fa-chevron-up"></i>
         </a>
     </footer>
